--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-# Front-end Style Guide
+/* # Front-end Style Guide
 
 ## Layout
 
@@ -24,4 +24,4 @@ The designs were created to the following widths:
 ### Font
 
 - Family: [Epilogue](https://fonts.google.com/specimen/Epilogue)
-- Weights: 500, 700
+- Weights: 500, 700 */
