--- a/styles.css
+++ b/styles.css
@@ -43,11 +43,12 @@ The designs were created to the following widths:
 body { 
     min-height: 100vh;
     background-color: var(--almostWhite);
+    font-family: 'Epilogue', sans-serif;
 }
 .navbar {
-    padding: 20px;
-    /* display: flex;
-    justify-content: space-evenly; */
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navLeft {
@@ -61,6 +62,7 @@ body {
 
 .nav-items {
     list-style-type: none;
+    /* padding: 0rem 1rem; */
     display: flex;
     justify-content: space-between;
 }
