--- a/styles.css
+++ b/styles.css
@@ -46,23 +46,59 @@ body {
     font-family: 'Epilogue', sans-serif;
 }
 .navbar {
-    padding: 2rem;
+
+    padding: 1.5rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .navLeft {
-    width: 30rem;
+    width: 33rem;
 
 }
-/* .navRight {
-    width: 25%;
-    
-} */
+.navRight {
+    width: 15rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
-.nav-items {
+.nav-items { 
     list-style-type: none;
-    /* padding: 0rem 1rem; */
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-left: 20px;
+    color: var(--gray);
+}
+.nav-items:hover {
+    color: var(--black);
+}
+
+.loginBtn {
+    color: var(--gray);
+}
+.loginBtn:hover {
+    color: var(--black);
+}
+
+a {
+    text-decoration: none;
+}
+
+
+.registerBtn {
+    font-size: 18px;
+    width: 6.2rem;
+    padding: 9px;
+    color: var(--gray);
+    border-radius: 14px;
+    border: 2px solid var(--gray);
+    background-color: var(--almostWhite);
+}
+.registerBtn:hover {
+    border: 2px solid var(--black);
+    color: var(--black);
+    cursor: pointer;
 }
