--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ section {
 }
 
 .innerLeftCont { 
-    width: 40%;
+    width: 47%;
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
@@ -136,4 +136,8 @@ section {
 .desktopHero {
     width: 30rem;
    
+}
+
+#main-text {
+    font-size: 5.5rem;
 }
