learn more button styled

--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,8 @@ section {
 
 .innerLeftCont { 
     width: 47%;
-    padding: 1.5rem;
+    margin: 0rem 1rem;
+    padding: 1.7rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -147,4 +148,19 @@ section {
     font-size: 18px;
     line-height: 28px;;
     color: var(--gray);
+}
+
+/* .buttonContainer {
+    padding-left: 1rem;
+} */
+.learnMoreBtn {
+    font-size: 18px;
+    border: none;
+    padding: 1rem 2rem;
+    color: white;
+    background-color: var(--black);
+    border-radius: 15px;
+}
+.learnMoreBtn:hover {
+    cursor: pointer;
 }
