--- a/styles.css
+++ b/styles.css
@@ -176,8 +176,26 @@ section {
     
 }
 .dropdownFeatures {
+    background-color: white;
+    box-shadow: 0px 0px 20px 1px rgba(0,0,0,.3);
+    font-size: 15px;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
     position: absolute;
-    top: 80px;
-    left: 170px;
+    top: 70px;
+    left: 120px;
+    width: 150px;
+    height: 160px;
+    border-radius: 10px;
 }
 
+.ul-features {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.ul-features li {
+    padding: .5rem;
+}
