--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,18 @@ section {
 .ul-features li {
     padding: .5rem;
 }
+
+.dropdownCompany {
+    background-color: white;
+    box-shadow: 0px 0px 20px 1px rgba(0,0,0,.3);
+    font-size: 15px;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 70px;
+    left: 300px;
+    width: 110px;
+    height: 120px;
+    border-radius: 10px;
+}
