--- a/styles.css
+++ b/styles.css
@@ -177,20 +177,21 @@ section {
 }
 .dropdownFeatures {
     background-color: white;
-    box-shadow: 0px 0px 20px 1px rgba(0,0,0,.3);
+    box-shadow: 0px 3px 30px 1px rgba(0,0,0,.2);
     font-size: 15px;
     padding: 1rem;
     display: flex;
     justify-content: center;
     position: absolute;
-    top: 70px;
-    left: 120px;
+    top: 80px;
+    left: 110px;
     width: 150px;
-    height: 160px;
+    height: 165px;
     border-radius: 10px;
+    z-index: 1;
 }
 
-.ul-features {
+.ul-features, .ul-company {
     list-style-type: none;
     display: flex;
     flex-direction: column;
@@ -199,18 +200,22 @@ section {
 .ul-features li {
     padding: .5rem;
 }
+.ul-company li {
+    padding: 8px 0px;
+}
 
 .dropdownCompany {
     background-color: white;
-    box-shadow: 0px 0px 20px 1px rgba(0,0,0,.3);
+    box-shadow: 0px 3px 30px 1px rgba(0,0,0,.2);
     font-size: 15px;
     padding: 1rem;
     display: flex;
     justify-content: center;
     position: absolute;
-    top: 70px;
+    top: 80px;
     left: 300px;
     width: 110px;
     height: 120px;
     border-radius: 10px;
+    z-index: 1;
 }
