--- a/styles.css
+++ b/styles.css
@@ -176,9 +176,8 @@ section {
     background-color: white;
     box-shadow: 0px 10px 20px 1px rgba(0,0,0,.15);
     font-size: 15px;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
+    padding: .580rem .5rem .5rem;
+    text-align: center;
     position: absolute;
     top: 75px;
     left: 110px;
@@ -186,6 +185,7 @@ section {
     height: 165px;
     border-radius: 10px;
     z-index: 1;
+    display: none;
 }
 
 .ul-features, .ul-company {
@@ -199,6 +199,7 @@ section {
 }
 .ul-company li {
     padding: 8px 0px;
+    margin-left: 5px;
 }
 
 .dropdownCompany {
@@ -206,8 +207,6 @@ section {
     box-shadow: 0px 10px 20px 1px rgba(0,0,0,.15);
     font-size: 15px;
     padding: 1rem;
-    display: flex;
-    justify-content: center;
     position: absolute;
     top: 75px;
     left: 300px;
