--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ body {
 
 .nav-item {
     margin-left: 2rem;
+
 }
 
 .loginBtn {
@@ -223,6 +224,9 @@ section {
     margin-right: 5px;
 }
 
+.hamburgerMenu {
+    display: none;
+}
 @media only screen and (max-width: 830px) {
     .innerRightCont {
         order: -1;
@@ -237,5 +241,16 @@ section {
     .testimonialCont {
         flex-wrap: wrap;
         max-width: 20rem;
+    }
+
+    .nav-item{ 
+        display: none;
+
+    }
+    .hamburgerMenu {
+        display: block;
+    }
+    .loginBtn, .registerBtn {
+        display: none;
     }
 }
