--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,13 @@ The designs were created to the following widths:
 }
 
 html {
-    min-width: 375px;
-    width: 100%;    
+    /* min-width: 375px; */
+    min-height: 100dvh;
+    width: 100%;  
+    background-color: red; 
 }
 body {
-    /* min-height: 100vh; */
-    /* width: 100%; */
+    min-height: 100vh;
     background-color: var(--almostWhite);
     font-family: 'Epilogue', sans-serif;
 }
@@ -125,7 +126,7 @@ section {
 }
 
 .innerLeftCont { 
-    width: 47%;
+    min-width: 47%;
     margin: 0rem 1rem;
     padding: 1.7rem;
     display: flex;
@@ -239,8 +240,7 @@ section {
     section{
         flex-direction: column;
         justify-content: center;
-        max-width: 100vw;
-        /* width: ; */
+       
     }
     .testimonialCont {
         flex-wrap: wrap;
@@ -256,5 +256,11 @@ section {
     }
     .loginBtn, .registerBtn {
         display: none;
+    }
+    .navbar{
+        padding: 1rem;
+    }
+    .nav-logo {
+        width: 130px;;
     }
 }
