--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
     min-width: 35.5rem;
 }
 .navRight {
-    min-width: 15rem;
+    /* min-width: 3rem; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -181,6 +181,7 @@ section {
     align-items: center;
     
 }
+
 .dropdownFeatures {
     background-color: white;
     box-shadow: 0px 10px 20px 1px rgba(0,0,0,.15);
@@ -234,6 +235,7 @@ section {
     display: none;
 }
 @media only screen and (max-width: 830px) {
+
     .innerRightCont {
         order: -1;
     }
@@ -260,13 +262,15 @@ section {
     .loginBtn, .registerBtn {
         display: none;
     }
-    .navbar{
-        padding: 1rem;
-    }
+    .navbar { padding: 1rem; }
+
     .nav-logo {
         width: 130px;;
     }
     .hamburgerMenu:hover {
         cursor: pointer;
     }
+    /* .navRight {
+        max-width: 100px;
+    } */
 }
