--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,10 @@ section {
     display: none;
 }
 
-
+.imgDiv {
+    padding: 1rem;
+    text-align: right;
+}
 @media only screen and (max-width: 830px) {
     #main-text {
         font-size: 3rem;
