--- a/styles.css
+++ b/styles.css
@@ -294,8 +294,19 @@ section {
     }
     
     .mobileNav {
+        background-color: rgba(18, 17, 17, 0.7); 
         position: fixed;
-        z-index: 1;
+        z-index: 1; 
+        left: 0;
+        top: 0; 
+        width: 100%; 
+        height: 100%; 
+        overflow: auto;
+        transition: ease-in .5s;
+    }
+    .mobileNavContent {
+        position: fixed;
+        z-index: 2;
         top: 0;
         right: 0;
         width: 50%;
