--- a/styles.css
+++ b/styles.css
@@ -237,8 +237,33 @@ section {
     display: none;
 }
 
+.closeNavX:hover  {
+    cursor: pointer;
+}
+   .mobileNav {
+    background-color: rgba(18, 17, 17, 0.7); 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0; 
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    transition: ease-in .3s;
+    display: none;
+}
+.mobileNavContent {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    background-color: var(--almostWhite);
+    /* display: none; */
+}
 .imgDiv {
-    padding: 1rem;
+    padding: 1.5rem;
     text-align: right;
 }
 @media only screen and (max-width: 830px) {
@@ -292,26 +317,5 @@ section {
     .navRight {
         width: 50px;
     }
-    
-    .mobileNav {
-        background-color: rgba(18, 17, 17, 0.7); 
-        position: fixed;
-        z-index: 1; 
-        left: 0;
-        top: 0; 
-        width: 100%; 
-        height: 100%; 
-        overflow: auto;
-        transition: ease-in .5s;
-    }
-    .mobileNavContent {
-        position: fixed;
-        z-index: 2;
-        top: 0;
-        right: 0;
-        width: 50%;
-        height: 100%;
-        background-color: var(--almostWhite);
-        box-shadow: 0 0 10px 20px rgba(0,0,0,.2);
-    }
+
 }
