--- a/styles.css
+++ b/styles.css
@@ -284,6 +284,22 @@ section {
     
 
 }
+@media only screen and (max-width: 500px) {
+    .innerRightCont, .innerLeftCont {
+        padding: 0.5rem;
+    }
+    
+    .desktopHero { width: 100%; }
+    section.container {
+        padding: 1rem;
+    }
+    #main-text {
+        font-size: 2.4rem;
+    }
+    #br {
+        display: none;
+    }
+}
 
 .mobileNav {
     background-color: rgba(18, 17, 17, 0.7); 
