--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,7 @@ section {
 @media only screen and (max-width: 500px) {
     .innerRightCont, .innerLeftCont {
         padding: 0.5rem;
+        margin: 0;
     }
     
     .desktopHero { width: 100%; }
