--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,7 @@ section {
         min-width: 50px;
     }
     .navRight { width: 50px; }
-    
+    .desktopHero { max-width: 450px; }
 
 }
 @media only screen and (max-width: 500px) {
